--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/websockets": "^9.2.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
