--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-# DB_URL=postgres://backend:backend123@db:5432/recommendation-system
+DB_HOST=zpi.zgrate.ovh
+DB_PORT=5035
 
-DB_HOST=db
-DB_PORT=5432
 DB_USER=backend
 DB_PASS=backend123
 DB_DB=recommendation-system
+
 
 ADMIN_USERNAME=admin
 ADMIN_EMAIL=admin@admin.com
