--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "typeorm:run-migrations": "npm run typeorm migration:run -- -d src/db/typeOrm.config.ts",
     "typeorm:generate-init-migration": "npm run typeorm -- -d src/db/typeOrm.config.ts migration:generate src/db/migrations/CreateTables",
     "typeorm:generate-migration": "npm run typeorm -- -d src/db/typeOrm.config.ts migration:generate",
-    "typeorm:create-migration": "npm run typeorm -- migration:create src/db/migrations/$npm_config_name",
+    "typeorm:create-migration": "npm run typeorm -- migration:create",
     "typeorm:revert-migration": "npm run typeorm -- -d src/db/typeOrm.config.ts migration:revert"
   },
   "dependencies": {
